--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -984,12 +984,13 @@ form.payment
       -o-transition: all 0.35s
       transition: all 0.35s
   .row-form
-    margin-bottom: 20px
+
     > div
 
       display: inline-block
       vertical-align: top
       float: left
+      margin-bottom: 20px
       span.error
         display: none
 
@@ -1185,7 +1186,7 @@ form.payment
               display: block
               margin: 0 6px
               //padding: 2px
-              border: 2px solid #fff
+              border: 1px solid #000
               width: 20px
               height: 20px
               position: relative
@@ -1217,7 +1218,7 @@ form.payment
               &:checked ~ .price
                 display: inline-block
               &:checked ~ label
-                border-color: #ffe400
+                border-color: #e3cc0a
             .price
                 position: absolute
                 bottom: 0
@@ -1332,6 +1333,7 @@ form.payment
                 height: 20px
                 display: inline-block
                 vertical-align: middle
+                border: 1px solid #000
               img
                 display: inline-block
                 vertical-align: middle
