--- a/src/payment.jade
+++ b/src/payment.jade
@@ -48,31 +48,33 @@ html(lang="ru")
                             div
                                 input(type="text", placeholder="Фамилия:", name="surname", minlength="2", data-validate="name")
                                 span.error Поле обязательное для заполнения
-                        .row-form.cf
-                            div
-                                input(type="text", placeholder="Страна:", name="country", data-validate="name" id="country")
-                                span.error Поле обязательное для заполнения
+
+
                             div
                                 input(type="text", placeholder="Город:",name="city", data-validate="name", id="city")
                                 span.error Поле обязательное для заполнения
-                        .row-form.delivery_courier.cf
-                            div
+
+                            div.delivery_courier
                                 input(type="text", placeholder="Улица:", name="street", data-validate="name" id="street")
                                 span.error Поле обязательное для заполнения
-                            div
+
+
+
+                            div.delivery_courier
                                 input(type="text", placeholder="Дом:",name="number", data-validate="number" id="number")
                                 span.error Поле обязательное для заполнения
 
-                        .row-form.cf
                             div
                                 input(type="text", placeholder="Телефон:", name="phone", data-validate="phone")
                                 span.error Поле обязательное для заполнения
+
+
                             div
                                 input(type="email", placeholder="Email:", name="email", data-validate="email")
                                 span.error Поле обязательное для заполнения
 
-                        .row-form.delivery_novaposhta.cf
-                            div
+
+                            div.delivery_novaposhta
                                 input(type="text", placeholder="Номер отделения:",name="number_np", data-validate="empty" id="number_np")
                                 span.error Поле обязательное для заполнения
 
