fixed payment footer

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -332,7 +332,7 @@ footer
           width: 28px
           display: inline-block
           vertical-align: middle
-
+          background: url("../img/icons/master_card.png") no-repeat
           margin-right: 24px
           a
             display: block
@@ -353,7 +353,7 @@ footer
 
 
           &.privat
-
+            background-position: -55px 0
             width: 15px
             a
               background-position: -55px 0
@@ -369,9 +369,11 @@ footer
                 background-position: -100px 0
 
           &.paypal
+            display: none
 
             width: 58px
             margin-right: 0
+            background-position: top right
             a
               background-position: top right
               &:hover
