--- a/src/footer.jade
+++ b/src/footer.jade
@@ -41,11 +41,11 @@ footer
                 h3 Способы оплаты
                 ul
                     li.payment1
-                        a(href="#")
+                        //a(href="#")
                     li.privat
-                        a(href="#")
+                        //a(href="#")
                     li.visa
-                        a(href="#")
+                        //a(href="#")
                     li.paypal
                         a(href="#")
 
