cart, product size, color name

--- a/src/cart.jade
+++ b/src/cart.jade
@@ -26,7 +26,12 @@ html(lang="ru")
                                     .attr
                                         .color
                                             span.attr_name Цвет:
+
                                             span.color_bg(style="background: #975f23")
+                                            span.color_name brown2
+                                        .size
+                                            span.attr_name Размер:
+                                            span.size_name 90
                                         .counts Количество 1 шт.
 
                                     .price 499.00 UAH
@@ -48,6 +53,11 @@ html(lang="ru")
                                         .color
                                             span.attr_name Цвет:
                                             span.color_bg(style="background: #975f23")
+                                            span.color_name brown2
+
+                                        .size
+                                            span.attr_name Размер:
+                                            span.size_name 120
                                         .counts Количество 1 шт.
 
                                     .price 499.00 UAH
