--- a/src/payment.jade
+++ b/src/payment.jade
@@ -77,7 +77,9 @@ html(lang="ru")
                             div.delivery_novaposhta
                                 input(type="text", placeholder="Номер отделения:",name="number_np", data-validate="empty" id="number_np")
                                 span.error Поле обязательное для заполнения
-
+                            div
+                                textarea( placeholder="Комментарий:", name="message",data-validate="empty")
+                                span.error Поле обязательное для заполнения
                         //button(type="submit")  Отправить
                         .btn.submit  Отправить
 
