--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -384,6 +384,13 @@ footer
     font-family: "SegoeUILight", sans-serif
     color:  #fefefe
     font-size: 14px
+    a
+      display: block
+      margin-top: 10px
+      line-height: 1em
+      &:hover
+        text-decoration: none
+        color: #ffe400
 
 
 
