--- a/src/footer.jade
+++ b/src/footer.jade
@@ -52,6 +52,7 @@ footer
 
 
         p.copyright © 2016 Symonen.ko
+            a(href="http://intertechcompany.com/" class="copyright" target="_blank") © INTERTECH 2015-2016
 
 
 #cache
