--- a/src/cart.jade
+++ b/src/cart.jade
@@ -27,7 +27,7 @@ html(lang="ru")
                                         .color
                                             span.attr_name Цвет:
 
-                                            span.color_bg(style="background: #975f23")
+                                            //span.color_bg(style="background: #975f23")
                                             span.color_name brown2
                                         .size
                                             span.attr_name Размер:
@@ -52,7 +52,7 @@ html(lang="ru")
                                     .attr
                                         .color
                                             span.attr_name Цвет:
-                                            span.color_bg(style="background: #975f23")
+                                            //span.color_bg(style="background: #975f23")
                                             span.color_name brown2
 
                                         .size
