--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1411,7 +1411,8 @@ form.payment
               .color_name
                 font-size: 16px
                 line-height: 20px
-                display: block
+                display: inline-block
+                vertical-align: bottom
 
               .color_bg
                 width: 20px
