--- a/src/footer.jade
+++ b/src/footer.jade
@@ -51,7 +51,8 @@ footer
 
 
 
-        p.copyright © 2016 Symonen.ko
+        p.copyright
+            span © 2016 Symonen.ko
             a(href="http://intertechcompany.com/" class="copyright" target="_blank") © INTERTECH 2015-2016
 
 
