--- a/src/list_products.jade
+++ b/src/list_products.jade
@@ -16,19 +16,24 @@ html(lang="ru")
 
                         .product
                             a(href="/product.html")
+
                                 .images.img-holder
+                                    span.sale_mark SALE %
                                     img(src="img/content/img2.jpg" alt="Товар 2")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
+                                .old_price  490,00 UAH
                         .product
                             a(href="/product.html")
                                 .images.img-holder
+                                    span.sale_mark SALE %
                                     img(src="img/content/img3.jpg" alt="Товар 3")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
                                 .images.img-holder
+                                    span.new_mark NEW
                                     img(src="img/content/img4.jpg" alt="Товар 4")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
@@ -46,6 +51,7 @@ html(lang="ru")
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
+
                                 .images.img-holder
                                     img(src="img/content/img3.jpg" alt="Товар 3")
                                 .product_name Кошелек кожаный Symonen.ko
