--- a/src/product.jade
+++ b/src/product.jade
@@ -11,6 +11,8 @@ html(lang="ru")
                     .productfull
                         .image
                             .img-holder.img-slider(data-cat="brown2")
+                                //span.sale_mark SALE %
+                                span.new_mark NEW
                                 .big-images#links1
 
                                         a(href="img/content/60-0.jpg")
@@ -135,6 +137,7 @@ html(lang="ru")
 
 
                                 .price 499.00 UAH
+                                .old_price  490,00 UAH
                                 button(type="submit") Добавить в корзину
 
 
