--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -428,6 +428,20 @@ footer
         .images
           position: relative
           height: 100%
+          .new_mark,.sale_mark
+            position: absolute
+            top: 50px
+            z-index: 999
+            background: #f34e0f
+            color: #fff
+            padding: 12px
+            font-size: 22px
+          .new_mark
+            background: #0fbea4
+
+
+
+
           img
             height: 100%
             max-width: inherit
