--- a/src/index.jade
+++ b/src/index.jade
@@ -29,10 +29,12 @@ html(lang="ru")
                             .product
                                 a(href="/product.html")
                                         .images
+                                            span.sale_mark SALE %
                                             img(src="img/content/img1.jpg" alt="Товар 1")
                             .product
                                 a(href="/product.html")
                                     .images
+                                        span.new_mark NEW
                                         img(src="img/content/img2.jpg" alt="Товар 2")
                             .product
                                 a(href="/product.html")
