--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -434,10 +434,15 @@ footer
             z-index: 999
             background: #f34e0f
             color: #fff
+            width: 85px
+            text-align: center
             padding: 12px
             font-size: 22px
+
           .new_mark
             background: #0fbea4
+            + .sale_mark
+                top: 100px
 
 
 
@@ -595,10 +600,15 @@ footer
             z-index: 999
             background: #f34e0f
             color: #fff
+            width: 85px
+            text-align: center
             padding: 12px
             font-size: 22px
+
           .new_mark
             background: #0fbea4
+            + .sale_mark
+                top: 100px
           img
             max-width: inherit
             width: auto
@@ -1150,10 +1160,15 @@ form.payment
       z-index: 999
       background: #f34e0f
       color: #fff
+      width: 85px
+      text-align: center
       padding: 12px
       font-size: 22px
+
     .new_mark
         background: #0fbea4
+        + .sale_mark
+              top: 100px
 
     .big-images
       margin-bottom: 40px
