--- a/src/index.jade
+++ b/src/index.jade
@@ -29,6 +29,8 @@ html(lang="ru")
                             .product
                                 a(href="/product.html")
                                         .images
+
+                                            span.new_mark NEW
                                             span.sale_mark SALE %
                                             img(src="img/content/img1.jpg" alt="Товар 1")
                             .product
