--- a/src/product.jade
+++ b/src/product.jade
@@ -11,8 +11,8 @@ html(lang="ru")
                     .productfull
                         .image
                             .img-holder.img-slider(data-cat="brown2")
-                                //span.sale_mark SALE %
                                 span.new_mark NEW
+                                span.sale_mark SALE %
                                 .big-images#links1
 
                                         a(href="img/content/60-0.jpg")
