--- a/src/list_products.jade
+++ b/src/list_products.jade
@@ -18,6 +18,7 @@ html(lang="ru")
                             a(href="/product.html")
 
                                 .images.img-holder
+                                    span.new_mark NEW
                                     span.sale_mark SALE %
                                     img(src="img/content/img2.jpg" alt="Товар 2")
                                 .product_name Кошелек кожаный Symonen.ko
