--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -553,17 +553,21 @@ footer
     -moz-box-sizing: border-box
     box-sizing: border-box
   &.home
-    header
+    .img_home
+      height: 320px
+      margin-bottom: 30px
+
+    //header
       height: 600px
 
 
-    .container
+    //.container
 
       top: -355px
       margin-bottom: -500px
 
 
-    footer
+    //footer
       padding-top: 210px
   &.shop
     header
@@ -1736,6 +1740,224 @@ body.client-safari
         background-position: 0 0
         &:hover
           background-position: 0 0
+
+
+.list_product_home
+  margin-bottom: 70px
+  h3
+    text-align: center
+    font-size: 40px
+    font-weight: normal
+    padding: 30px 0 40px
+    position: relative
+    line-height: 1em
+    margin-bottom: 65px
+    &:before
+      position: absolute
+      width: 180px
+      height: 30px
+      box-sizing: border-box
+      border: 2px solid #ffe50a
+      border-top: 3px solid #ffe50a
+      top: 0
+      left: 50%
+      margin-left: -90px
+      content: ""
+      border-bottom: 0
+
+    &:after
+      position: absolute
+      width: 180px
+      height: 30px
+      box-sizing: border-box
+      border: 2px solid #ffe50a
+      border-bottom: 3px solid #ffe50a
+      bottom: 0
+      left: 50%
+      margin-left: -90px
+      content: ""
+      border-top: 0
+
+
+  form.filter
+    width: 220px
+    float: left
+    .title
+      background: #ffe400
+      width: 100%
+      text-align: center
+      margin-bottom: 20px
+      padding: 15px 0
+      font-size: 20px
+      line-height: 1em
+    .list_attribute
+      margin-bottom: 20px
+      border-bottom: 1px solid #e2e2e0
+      &:last-child
+        border-bottom: 0
+      .name_attribute
+        margin-bottom: 20px
+        font-size: 16px
+        line-height: 1em
+      .attribute
+        margin-bottom: 20px
+        input[type="checkbox"],
+        input[type="radio"]
+          display: none
+          &:checked
+            + label
+              &:before
+                 opacity: 1
+                 transition: opacity 0.35s
+        label
+          font-size: 16px
+          line-height: 18px
+          color: #404040
+          padding-left: 30px
+          position: relative
+          &:before
+            position: absolute
+            top: 50%
+            left: 0
+            content: ""
+            background: url("../img/icons/filter.png") no-repeat center
+            width: 18px
+            height: 18px
+            margin-top: -9px
+            opacity: 0
+            transition: opacity 0.35s
+            z-index: 2
+          &:after
+            position: absolute
+            top: 50%
+            left: 0
+            content: ""
+            background: #cacccc
+            width: 18px
+            height: 18px
+            margin-top: -9px
+            z-index: 1
+
+  .pagination
+    padding-top: 50px
+    margin-bottom: 0
+  .ias-trigger
+    text-align: center
+    margin-top: 50px
+    a
+      display: inline-block
+      padding: 20px 30px
+      text-align: center
+      color: #000
+      text-transform: uppercase
+      background: #ffe400
+      line-height: 1em
+      font-family: "SegoeUI-Semibold", sans-serif
+      font-size: 14px
+      transition: all 0.35s
+      &:hover
+        background: #e3cc0a
+        transition: all 0.35s
+        text-decoration: none
+
+
+  .products
+    width: 720px
+    margin: 0 -10px
+    font-size: 0
+    float: right
+    .product
+      width: 220px
+      display: inline-block
+      vertical-align: top
+      margin: 0 10px 20px
+      text-align: center
+
+      a
+        display: block
+        color: #000
+        font-size: 18px
+        &:hover
+          text-decoration: none
+          .product_name
+            color: #e3cc0a
+          .images
+            &:before
+              opacity: 1
+              transition: all .3s
+            &:after
+              opacity: 1
+              transform: translateY(0px)
+              transition: all .3s ease-out
+
+        .images
+          border: 5px solid #e6e6e6
+          margin-bottom: 20px
+          position: relative
+          width: 100%
+          height: 260px
+          box-sizing: border-box
+          &:before
+            background: rgba(255, 228, 0, 0.71)
+            position: absolute
+            content: ''
+            top: 0
+            left: 0
+            height: 100%
+            width: 100%
+            -webkit-transition: all .3s
+            transition: all .3s
+            opacity: 0
+          &:after
+            background: url("../img/icons/product_hover.png") no-repeat center
+            position: absolute
+            content: ''
+            top: 50%
+            left: 50%
+            height: 45px
+            width: 45px
+            opacity: 0
+            -webkit-transform: translateY(30px)
+            transform: translateY(30px)
+            -webkit-transition: all .3s ease-in
+            transition: all .3s ease-in
+            margin-top: -22px
+            margin-left: -22px
+          img
+            height: 100%
+
+
+        .product_name
+          margin-bottom: 20px
+          line-height: 1.2em
+        .price
+          font-size: 20px
+          line-height: 1em
+          font-family: "SegoeUI-Semibold", sans-serif
+        .old_price
+          font-size: 16px
+          line-height: 1em
+          font-family: "SegoeUI-Semibold", sans-serif
+          color: #000
+          margin-top: 10px
+          text-decoration: line-through
+
+        .new_mark, .sale_mark
+          position: absolute
+          top: 50px
+          z-index: 999
+          background: #f34e0f
+          color: #fff
+          width: 85px
+          text-align: center
+          padding: 12px
+          font-size: 22px
+        .new_mark
+          background: #0fbea4
+          + .sale_mark
+            top: 100px
+
+
 
 
 body.client-moz
