--- a/src/list_products.jade
+++ b/src/list_products.jade
@@ -20,61 +20,61 @@ html(lang="ru")
                                 .images.img-holder
                                     span.new_mark NEW
                                     span.sale_mark SALE %
-                                    img(src="img/content/img2.jpg" alt="Товар 2")
+                                    img(src="img/content/img_product2.jpg" alt="Товар 2")
                                 .product_name Кошелек кожаный Symonen.ko
-                                .price 390,00 UAH
-                                .old_price  490,00 UAH
+                                .price 390,00 грн
+                                .old_price  490,00 грн
                         .product
                             a(href="/product.html")
                                 .images.img-holder
                                     span.sale_mark SALE %
-                                    img(src="img/content/img3.jpg" alt="Товар 3")
+                                    img(src="img/content/img_product2.jpg" alt="Товар 3")
                                 .product_name Кошелек кожаный Symonen.ko
-                                .price 390,00 UAH
+                                .price 390,00 грн
                         .product
                             a(href="/product.html")
                                 .images.img-holder
                                     span.new_mark NEW
-                                    img(src="img/content/img4.jpg" alt="Товар 4")
+                                    img(src="img/content/img_product2.jpg" alt="Товар 4")
                                 .product_name Кошелек кожаный Symonen.ko
-                                .price 390,00 UAH
+                                .price 390,00 грн
                         .product
                             a(href="/product.html")
                                 .images.img-holder
-                                    img(src="img/content/img5.jpg" alt="Товар 5")
+                                    img(src="img/content/img_product2.jpg" alt="Товар 5")
                                 .product_name Кошелек кожаный Symonen.ko
-                                .price 390,00 UAH
+                                .price 390,00 грн
                         .product
                             a(href="/product.html")
                                 .images.img-holder
-                                    img(src="img/content/img2.jpg" alt="Товар 2")
+                                    img(src="img/content/img_product2.jpg" alt="Товар 2")
                                 .product_name Кошелек кожаный Symonen.ko
-                                .price 390,00 UAH
+                                .price 390,00 грн
                         .product
                             a(href="/product.html")
 
                                 .images.img-holder
-                                    img(src="img/content/img3.jpg" alt="Товар 3")
+                                    img(src="img/content/img_product2.jpg" alt="Товар 3")
                                 .product_name Кошелек кожаный Symonen.ko
-                                .price 390,00 UAH
+                                .price 390,00 грн
                         .product
                             a(href="/product.html")
                                 .images.img-holder
-                                    img(src="img/content/img4.jpg" alt="Товар 4")
+                                    img(src="img/content/img_product2.jpg" alt="Товар 4")
                                 .product_name Кошелек кожаный Symonen.ko
-                                .price 390,00 UAH
+                                .price 390,00 грн
                         .product
                             a(href="/product.html")
                                 .images.img-holder
-                                    img(src="img/content/slider_price2.png" alt="Товар 5")
+                                    img(src="img/content/img_product2.jpg" alt="Товар 5")
                                 .product_name Кошелек кожаный Symonen.ko
-                                .price 390,00 UAH
+                                .price 390,00 грн
                         .product
                             a(href="/product.html")
                                 .images.img-holder
-                                    img(src="img/content/blog.png" alt="Товар 4")
+                                    img(src="img/content/img_product2.jpg" alt="Товар 4")
                                 .product_name Кошелек кожаный Symonen.ko
-                                .price 390,00 UAH
+                                .price 390,00 грн
 
 
 
